[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/Station.gd" type="Script" id=1]
[ext_resource path="res://assets/red_square.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31, 31 )

[node name="Station" type="Area2D"]
position = Vector2( 145, 111 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, -1 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -1 )
texture = ExtResource( 2 )

[node name="StationDuration" type="Timer" parent="."]
one_shot = true

[connection signal="input_event" from="." to="." method="_input_event"]
[connection signal="timeout" from="StationDuration" to="." method="_on_StationDuration_timeout"]
